<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/CustomerOrderInfoLabel" android:text="@string/order_detail_service" />
            <TextView android:id="@+id/orderDetailLineService" style="@style/CustomerOrderInfoValue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView android:id="@+id/orderDetailLineQuantityLabel" style="@style/CustomerOrderInfoLabel" />
            <TextView android:id="@+id/orderDetailLineQuantity" style="@style/CustomerOrderInfoValue" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/CustomerOrderInfoLabel" android:text="@string/order_detail_price" />
            <TextView android:id="@+id/orderDetailLinePrice" style="@style/CustomerOrderInfoValue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/CustomerOrderInfoLabel" android:text="@string/order_detail_subtotal" />
            <TextView android:id="@+id/orderDetailLineSubtotal" style="@style/CustomerOrderInfoValue" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
